<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <Button
        android:id="@+id/go_sp_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sharedpreferences_demo"/>
    <Button
        android:id="@+id/go_of_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openfile_demo"/>
    <Button
        android:id="@+id/go_sqlite_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqlite_demo"/>

</LinearLayout>
