<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenFileDemo"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:id="@+id/show_file_no_formation_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_storage_no_formation" />

    <TextView
        android:id="@+id/show_format_file_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_with_formation" />


    <Button
        android:id="@+id/storage_no_formation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storage_no_formation" />
    <Button
        android:id="@+id/storage_with_formation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storage_with_formation" />

    <Button
        android:id="@+id/show_file_no_formation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_storage_no_formation" />

    <Button
        android:id="@+id/show_format_file_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_with_formation" />

</LinearLayout>